--- a/.github/workflows/deploy-snapshot-nexus.yml
+++ b/.github/workflows/deploy-snapshot-nexus.yml
@@ -13,7 +13,7 @@ on:
           - false
 
 env:
-  NEXUS_REGISTRY: https://nexus.imatia.com/repository/npm-group/
+  NEXUS_REGISTRY: https://nexus.imatia.com/repository/npm/
 
 jobs:
   build:
