--- a/angular.json
+++ b/angular.json
@@ -5,7 +5,8 @@
   "cli": {
     "cache": {
       "enabled": false
-    }
+    },
+    "analytics": false
   },
   "projects": {
     "ontimize-web-ngx-quickstart-charts": {
