--- a/angular.json
+++ b/angular.json
@@ -5,7 +5,8 @@
   "cli": {
     "cache": {
       "enabled": false
-    }
+    },
+    "analytics": false
   },
   "projects": {
     "ontimize-web-ngx-quickstart-charts": {
@@ -52,7 +53,11 @@
             "vendorChunk": true,
             "extractLicenses": false,
             "buildOptimizer": false,
-            "sourceMap": true,
+            "sourceMap": {
+              "scripts": true,
+              "styles": true,
+              "vendor": true
+            },
             "optimization": false,
             "namedChunks": true,
             "allowedCommonJsDependencies": [
